part4/grammar.txt
GRAMMAR in EBNF (Extended Backus-Naur Form) Format

program        ::= statement* EOF

statement      ::= definition | assignment | expr

definition     ::= "def" IDENTIFIER LEFT_PAREN parameters? RIGHT_PAREN "=" statement
parameters     ::= IDENTIFIER ("," IDENTIFIER)*

assignment     ::= IDENTIFIER "=" expr
expr           ::= addition
addition       ::= multiplication ( ("+" | "-") multiplication )*
multiplication ::= exponent ( ("*" | "/") exponent )*
exponent       ::= factor ( "**" exponent )?
factor         ::= NUMBER | LEFT_PAREN expr RIGHT_PAREN
